added javascript functionality

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <ul class="traffic-nav">
                     <li class="traffic-nav-link">Hourly</li>
                     <li class="traffic-nav-link">Daily</li>
-                    <li class="traffic-nav-link active">Weekly</li>
-                <li class="traffic-nav-link">Monthly</li>
+                    <li class="traffic-nav-link">Weekly</li>
+                <li class="traffic-nav-link active">Monthly</li>
                 </ul>
             </div>
             <div class="widget-container-full">
@@ -264,18 +264,20 @@
         <div class="button1">
             <label for="togBtn">Send Email Notfications </label>
             <input type="checkbox" class="toggle" id="togBtn">
-            <span class="labels"></span>
+            <span class="labels" id="label1"></span>
         </div>
             <div class="button2">
                 <label for="togBtn2">Set Profile to Public &nbsp; &nbsp; &nbsp;</label>
                 <input type="checkbox" class="toggle" id="togBtn2">
-                <span class="labels"></span>
+                <span class="labels" id="label2"></span>
             </div> 
         
        <select class="form-field" id="timezone">
             <option disabled selected>Select a Timezone</option>
             <option>Eastern</option>
             <option>Western</option>
+            <option>PDT</option>
+            <option>EST</option>
         <!-- more options -->
        </select>
        
